--- a/ESM204_Assignment4.Rmd
+++ b/ESM204_Assignment4.Rmd
@@ -50,7 +50,7 @@ D_int <- MC_D_model$coefficients[1]
 D_slope <- MC_D_model$coefficients[2]
 
 
-model_plot <- ggplot(data, aes(x=Abatement))+
+model_plot <- ggplot(mc_abatement, aes(x=Abatement))+
   geom_point(aes(y = MC_A, color = "MC_A"))+
   geom_smooth(aes(y = MC_A), method = lm, se = FALSE, size = 0.5, color = "gray20")+
   geom_point(aes(y = MC_B, color = "MC_B"))+
