--- a/ESM204_Assignment4.Rmd
+++ b/ESM204_Assignment4.Rmd
@@ -20,7 +20,7 @@ library(wesanderson)
 mc_abatement <- read_csv("HW4Data.csv")
 ```
 
-##1 
+##1. Write down a plausible function form for the marginal cost of abatement for sectors: A, B, C, D. How well do your models fit the data for each sector? You may need to experiment with different functional forms. Produce a plot of the estimated marginal abatement cost functions in all four sectors (this plot should go in your memo).
 
 ```{r}
 MC_A_model <- lm(MC_A ~ Abatement, data = mc_abatement)
@@ -76,5 +76,58 @@ model_plot <- ggplot(mc_abatement, aes(x = Abatement))+
 #geom_line(data = catch_df, aes(x = catch_time_seq, y = catch_modeling), color = "red", size = 1)
 
 model_plot
+```
+
+##2. Using these models and the current level of carbon emissions, derive each sector's demand curve for carbon emissions. In other words, how much would each sector be willing to pay for the right to pollute the first unit, second unit, etc? Draw these demand curves on a graph. Which sector is willing to pay the most for the first unit of carbon emissions?
+
+```{r}
+
+
+```
+
+##3. For country X (Sectors A, B, and C), assume there are no "co-benefits" (i.e. that there are no local pollutants that are affected by carbon abatement). Suppose to meet the Paris Accord commitments, country X needs to cut all carbon emissions in half. For each of the policy options listed below, derive: (1) the total cost of meeting the target in country X, (2) the cost (or benefit) to each sector, and (3) the tax revenue generated.
+
+###a. Cap on carbon. Each sector (A, B, and C) must cut its carbon emissions by 100 tons (thus reducing total emissions from 600 down to 300).
+
+```{r}
+
+```
+
+###b. Tax on carbon. To emit a ton of carbon in country X, you must pay a tax of $t. You will need to find the tax that accomplishes the desired reduction.
+
+```{r}
+
+```
+
+###c. Cap and trade. Each sector (A, B, C) is allocated carbon permits equal to their current emissions minus 100 (same as in (a) above), thus achieving the total reduction of 300. Then, these three sectors are allowed to trade with each other. You will need to derive the outcome of that trading.
+
+```{r}
+
+```
+
+##4. Again, without any co-benefits, suppose that country Y (which only has one carbon-emitting sector, D) has no obligation to reduce its emissions. Country X asks country Y to enter the country X carbon market. Doing so would require country Y to put a cap on carbon emissions at its current level of emissions (300 tons), but would then allow country Y to sell carbon offsets to sectors A, B, or C. Are there any incentives for country Y to enter country X’s carbon market and to thus place a voluntary cap on its emissions? Are there any incentives for country X to try to attract country Y into its market?
+
+```{r}
+
+```
+
+##5. Now assume that every ton of carbon emissions creates 1 ton of local air pollution. Local air pollution causes economic damages (health, environmental, etc.), but only in the country in which it is emitted. Assume there are no local air pollution regulations in either country X or country Y.
+
+###a. In a carbon cap and trade market that only covers sectors in country X, how much local air pollution would you expect in country X? In country Y?
+
+```{r}
+
+```
+
+###b. If country Y enters the carbon market for country X (as in question 4 above), how much local pollution will there be in country X and country Y?
+
+```{r}
+
+```
+
+###c. What advice can you give country X and country Y about the desirability of allowing international trade of carbon emissions credits?
+
+```{r}
+
 ```
 
