--- a/ESM204_Assignment4.Rmd
+++ b/ESM204_Assignment4.Rmd
@@ -64,8 +64,8 @@ model_plot <- ggplot(mc_abatement, aes(x = Abatement))+
   geom_point(aes(y = MC_D, color = "MC_D"))+
   geom_smooth(aes(y = MC_D), method = lm, se = FALSE, size = 0.5, color = "darksalmon")+
   scale_color_manual(values  = wes_palette("Darjeeling1"), name = "Sectors", labels = c("Sector A", "Sector B", "Sector C", "Sector D")) +
-  scale_y_continuous(expand = c(0,0)) +
-  scale_x_continuous(expand = c(0,0)) +
+  scale_y_continuous(expand = c(0,5)) + # can change back to 0,0 
+  scale_x_continuous(expand = c(0,5)) + # can change back to 0,0
   theme_classic() +
   labs(x = "Abatement (tons of CO2)",
        y = "Marginal Cost of Abatement ($/ton)", 
@@ -78,3 +78,42 @@ model_plot <- ggplot(mc_abatement, aes(x = Abatement))+
 model_plot
 ```
 
+##2 
+```{r}
+
+sectorAmp = MC_A_model$coefficients[2]*180 + MC_A_model$coefficients[1]
+#WTP for first unit is $95.19
+sectorBmp = MC_B_model$coefficients[2]*200 + MC_B_model$coefficients[1]
+#WTP for first unit is $49.07
+sectorCmp = MC_C_model$coefficients[2]*220 + MC_C_model$coefficients[1]
+#WTP for first unit is $160.79
+sectorDmp = MC_D_model$coefficients[2]*300 + MC_D_model$coefficients[1]
+#WTP for first unit is $87.67
+
+#sector C willing to pay the most for the first unit of carbon emissions
+
+# demand function for sector A
+q_A <- seq(0,180,by=10)
+d_A <- function(q){(A_slope*(180-q)) + A_int}
+demand_A <- d_A(q_A)
+curve(d_A, from=0, to=300, xlab = "quantity", ylab = "price",  ylim = c(0,200), xlim = c(0,350), col = "red")
+
+# demand function for sector B
+q_B <- seq(0,200,by=10)
+d_B <- function(q){(B_slope*(200-q) + B_int)}
+demand_B <- d_B(q_B)
+curve(d_B, from=0, to=300, xlab= "quantity", ylab = "price", add= TRUE,  ylim = c(0,200), xlim = c(0,350), col = "green")
+
+# demand function for sector C
+q_C <- seq(0,220,by=10)
+d_C <- function(q){(C_slope*(220-q) + C_int)}
+demand_C <- d_C(q_C)
+curve(d_C, from=0, to=300, xlab= "quantity", ylab = "price", add= TRUE,  ylim = c(0,200), xlim = c(0,350), col = "yellow")
+
+# demand function for sector D
+q_D <- seq(0,300,by=10)
+d_D <- function(q){(D_slope*(300-q) + D_int)}
+demand_D <- d_D(q_D)
+curve(d_D, from=0, to=400, xlab= "quantity", ylab = "price", add= TRUE, ylim = c(0,200), xlim = c(0,350), col = "orange")
+
+```
