--- a/ESM204_Assignment4.Rmd
+++ b/ESM204_Assignment4.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "ESM204_Assignment4"
-author: "Alex Brown"
+author: "Alex Brown & Alex Ivina"
 date: "5/29/2019"
 output: html_document
 ---
@@ -18,6 +18,12 @@ library(wesanderson)
 
 ```{r}
 mc_abatement <- read_csv("HW4Data.csv")
+
+A <- 180
+B <- 200
+C <- 220
+D <- 300
+
 ```
 
 ##1. Write down a plausible function form for the marginal cost of abatement for sectors: A, B, C, D. How well do your models fit the data for each sector? You may need to experiment with different functional forms. Produce a plot of the estimated marginal abatement cost functions in all four sectors (this plot should go in your memo).
@@ -240,42 +246,58 @@ TC_country_cap # 6698.883
 
 ```
 
-###b Tax on carbon 
+####b Tax on carbon 
 
 ```{r}
 
 # first rearrange supply curves
-A_rearrange <- function(y){(1/a$coefficients[2])*(-a$coefficients[1] + y)}
-B_rearrange <- function(y){(1/b$coefficients[2])*(-b$coefficients[1] + y)}
-C_rearrange <- function(y){(1/c$coefficients[2])*(-c$coefficients[1] + y)}
+A_rearrange <- function(y){(1/MC_A_model$coefficients[2])*(-MC_A_model$coefficients[1] + y)}
+B_rearrange <- function(y){(1/MC_B_model$coefficients[2])*(-MC_B_model$coefficients[1] + y)}
+C_rearrange <- function(y){(1/MC_C_model$coefficients[2])*(-MC_C_model$coefficients[1] + y)}
 #ag_supply_country_X2 <- function(y){A_rearrange(y) + B_rearrange(y) + C_rearrange(y)}
-ag_intercept <- (-a$coefficients[1]/a$coefficients[2]) + (-b$coefficients[1]/b$coefficients[2]) + (-c$coefficients[1]/c$coefficients[2])
-ag_slope <- (1/a$coefficients[2]) + (1/b$coefficients[2]) + (1/c$coefficients[2])
+ag_intercept <- (-MC_A_model$coefficients[1]/MC_A_model$coefficients[2]) + (-MC_B_model$coefficients[1]/MC_B_model$coefficients[2]) + (-MC_C_model$coefficients[1]/MC_C_model$coefficients[2])
+ag_slope <- (1/MC_A_model$coefficients[2]) + (1/MC_B_model$coefficients[2]) + (1/MC_C_model$coefficients[2])
 ag_supply_country_X <- function(x){(-ag_intercept/ag_slope) + (x/ag_slope)}
 taxprice <- ag_supply_country_X(300)
 A_rearrange(taxprice) + B_rearrange(taxprice) + C_rearrange(taxprice)
 A_abate <- A_rearrange(taxprice) # 83.33489 
 B_abate <- B_rearrange(taxprice) # 151.4956
 C_abate <- C_rearrange(taxprice) # 65.16953 
-A_tax_abatementcost <- integrate(supply_A, lower = 0, upper = A_abate) 
-TC_A_tax <- A_tax_abatementcost$value + (cp_A - A_abate)*taxprice   
+A_tax_abatementcost <- integrate(s_A, lower = 0, upper = A_abate) 
+TC_A_tax <- A_tax_abatementcost$value + (A - A_abate)*taxprice   
 #  5093.786 
-B_tax_abatementcost <- integrate(supply_B, lower = 0, upper = B_abate) 
-TC_B_tax <- B_tax_abatementcost$value + (cp_B - B_abate)*taxprice   
+B_tax_abatementcost <- integrate(s_B, lower = 0, upper = B_abate) 
+TC_B_tax <- B_tax_abatementcost$value + (B - B_abate)*taxprice   
 #  5604.635 
-C_tax_abatementcost <- integrate(supply_C, lower = 0, upper = C_abate) 
-TC_C_tax <- C_tax_abatementcost$value + (cp_C - C_abate)*taxprice   
+C_tax_abatementcost <- integrate(s_C, lower = 0, upper = C_abate) 
+TC_C_tax <- C_tax_abatementcost$value + (C - C_abate)*taxprice   
 #  7009.365  
 TC_country_tax <- TC_C_tax + TC_B_tax + TC_A_tax
 #  17707.79
 #tax revenue generated
-tax_rev <- (cp_A - A_abate)*taxprice + (cp_B - B_abate)*taxprice  + (cp_C - C_abate)*taxprice 
+tax_rev <- (A - A_abate)*taxprice + (B - B_abate)*taxprice  + (C - C_abate)*taxprice 
 #  11827.97 
 
 
 ```
 
+####c. cap and trade
 
+```{r}
+TC_A_captrade <- A_tax_abatementcost$value + (100 - A_abate)*taxprice
+# 1939.66
+TC_B_captrade <- B_tax_abatementcost$value + (100 - B_abate)*taxprice
+#  1661.977
+TC_C_captrade <- C_tax_abatementcost$value + (100 - C_abate)*taxprice
+#  2278.176 
+TC_country_captrade <- TC_A_captrade + TC_B_captrade + TC_C_captrade
+#  5879.812 
+# no tax revenue
+
+```
+
+
+#### Old stuff ####
 ## 3
 
 ##a 
