--- a/ESM204_Assignment4.Rmd
+++ b/ESM204_Assignment4.Rmd
@@ -225,6 +225,10 @@ s_C = function(x){
   (MC_C_model$coefficients[2]*x +MC_C_model$coefficients[1])
 }
 
+s_D = function(x){
+  (MC_D_model$coefficients[2]*x +MC_D_model$coefficients[1])
+}
+
 ```
 
 ```{r}
@@ -317,6 +321,20 @@ B_abate_inter <- B_rearrange(taxprice_inter) # 103.0711
 C_abate_inter <- C_rearrange(taxprice_inter) #  52.89119  
 D_abate_inter <- D_rearrange(taxprice_inter) # 77.3869 
 ### Abatement 300
+
+
+A_tax_abatementcost_inter <- integrate(s_A, lower = 0, upper = A_abate_inter) 
+#TC_A_tax_inter <- A_tax_abatementcost_inter$value + (cp_A - A_abate_inter)*taxprice_inter  
+#  4083.188 
+B_tax_abatementcost_inter <- integrate(s_B, lower = 0, upper = B_abate_inter) 
+#TC_B_tax_inter <- B_tax_abatementcost_inter$value + (cp_B - B_abate_inter)*taxprice_inter   
+#  4904.803 
+C_tax_abatementcost_inter <- integrate(s_C, lower = 0, upper = C_abate_inter) 
+#TC_C_tax_inter <- C_tax_abatementcost_inter$value + (cp_C - C_abate_inter)*taxprice_inter   
+#   5460.18 
+#TC_country_X_tax_inter <- TC_C_tax_inter + TC_B_tax_inter + TC_A_tax_inter
+#   14448.17 
+D_abatementcost_inter <- integrate(s_D, lower = 0, upper = D_abate_inter) 
 
 ```
 
